--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,202 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* :root {
+  --primary-color: #d5d194;
+} */
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  background: #f6eae6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Navbar */
+.navbar {
+  background: rgb(3, 1, 62);
+  color: rgb(241, 20, 145);
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* font-style: italic; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar ul {
+  list-style: none;
+  display: flex;
+}
+
+.navbar ul li {
+  margin-left: 1rem;
+}
+
+.navbar a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.navbar a:hover {
+  color: var(--primary-color);
+}
+
+
+.form-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.form-section h1 {
+  font-weight:bolder;
+  color: rgb(117, 13, 36);
+  font-size: 50px;
+}
+
+.form-section p{
+  font-style: italic;
+  font-size: 15x;
+  font-weight: 800;
+  margin: 40px;
+}
+
+
+form {
+  margin: 30px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 600px;
+  /* border: 2px solid #3f3f3f; */
+  border-radius: 5px;
+  background: #f79898;
+  /* box-shadow: 0px 0px 7px #9e9e9e; */
 }
 
-.App-link {
-  color: #61dafb;
+form input, form select {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 12px 20px;
+  margin: 10px;
+  border: 2px solid #a55d5d;
+  border-radius: 5px;
+  transition: all 0.2s linear;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+form input:focus,
+form select:focus {
+  outline: none;
+  border-color: #5f3535;
+}
+
+
+
+form button {
+  font-size: 20px;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 5px;
+  background: rgb(47, 12, 116);
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  margin: 20px;
+
+}
+
+form button:hover {
+  transform: scale(1.1);
+}
+
+/* Image */
+
+.image {
+  width: 100%;
+  margin-top: 2rem;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+.msg {
+  font-size: 1.6rem;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+@media screen and (max-width: 670px){
+  .form-section h1 {
+    font-size: 40px;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .form-section p{
+    padding: 10px;
+    font-size: 15x;
+    
+  }
+
+}
+@media screen and (max-width: 618px){
+  form{
+    width: 550px;
   }
 }
+@media screen and (max-width: 556px){
+  form{
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 496px){
+  form{
+    width: 420px;
+  }
+}
+
+@media screen and (max-width: 423px){
+  form{
+    width: 320px;
+  }
+}
+.display {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .error {
+    background-color: #dc3545;
+    color: #ced4da;
+    font-weight: bold;
+  }
+  
+  .reason {
+    font-style: italic;
+  }
+  
+  .correct {
+    background-color: #28a745;
+    color: #ced4da;
+    font-weight: bold;
+  }
